Add introduction, Circle Blvd, newsletter link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!doctype html><html><head><style>body{color:black;background:black;margin-top:20em;text-align:center;}</style></head><body><h1>secret project</h1></body></html>
+<!doctype html>
+<html>
+<head>
+	<title>Secret Project</title>
+	<link rel="stylesheet" type="text/css" href="style/main.css">
+	<meta name="description" content="Secret Project, a collaboration software company based in Corvallis, Oregon.">
+</head>
+<body><div class="container">
+	<h1>Secret Project</h1>
+	<div class="content col-sm-offset-2 col-sm-8">
+		<p>Hello,</p>
+		<p>Secret Project is a software company.</p>
+
+		<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
+
+		<p>Our first project is <a href="https://circleblvd.org">Circle Blvd.</a>, a task managing website for small teams. It is open to the public and free to use.</p>
+
+		<p>Our newsletter is at <a href="http://a.secretproject.org">a.secretproject.org</a>.
+
+		<p><div>Sincerely,</div>
+		<div>Phil Manijak</div></p>
+	</div>
+</div></body>
+</html>
