Add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Secret Project</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css">
 	<meta name="description" content="Secret Project, a collaboration software company based in Corvallis, Oregon.">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body><div class="container">
 	<h1>Secret Project</h1>
