--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
 
-		<p>Our first project is <a href="https://circleblvd.org">Circle Blvd.</a>, a task managing website for small teams. It is open to the public and free to use.</p>
+		<p>Our first product is <a href="https://circleblvd.org">Circle Blvd.</a>, a task management site for community projects. It is open to the public and free to use.</p>
 
 		<p>Our newsletter is at <a href="http://a.secretproject.org">a.secretproject.org</a>.
 
