--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 	<h1>Secret Project</h1>
 	<div class="content col-sm-offset-2 col-sm-8">
 		<p>Hello,</p>
-		<p>Secret Project is a software company.</p>
+		<p>Secret Project is a software company in Oregon.</p>
 
 		<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
 
 		<p>Our first product is <a href="https://circleblvd.org">Circle Blvd.</a>, a task management site for community projects. It is open to the public and free to use.</p>
 
-		<p>Our newsletter is at <a href="http://a.secretproject.org">a.secretproject.org</a>.
+		<p>We host <a href="http://www.codecorvallis.com">Code Corvallis</a>, a monthly, 2-hour unconference about software. It is also open to the public and free to attend.</p>
+
+		<p>Our latest news is posted to Twitter, at <a href="https://twitter.com/_proj">@_proj</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>.</p>
 
 		<p><div>Sincerely,</div>
 		<div>Phil Manijak</div></p>
