Rename to Holmwell Software

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
 <head>
-	<title>Secret Project</title>
+	<title>Holmwell Software</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css">
-	<meta name="description" content="Secret Project, a collaboration software company based in Corvallis, Oregon.">
+	<meta name="description" content="Holmwell, a collaboration software company based in Corvallis, Oregon.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body><div class="container">
-	<h1>Secret Project</h1>
+	<h1>Holmwell Software</h1>
 	<div class="content col-sm-offset-2 col-sm-8">
 		<p>Hello,</p>
-		<p>Secret Project is a software company in Oregon.</p>
+		<p>Holmwell is a software company in Oregon.</p>
 
 		<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
 
@@ -20,7 +20,7 @@
 
 		<p>We're looking for a few <a href="http://corvallis.craigslist.org/cpg/5084290605.html">summer interns</a>.
 
-		<p>Our latest news is posted to Twitter, at <a href="https://twitter.com/_proj">@_proj</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>.</p>
+		<p>Our latest news is posted to Twitter, at <a href="https://twitter.com/_holmwell">@_holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>.</p>
 
 		<p><div>Sincerely,</div>
 		<div>Phil Manijak</div></p>
