We're in Corvallis

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h1>Holmwell Software</h1>
 	<div class="content col-sm-offset-2 col-sm-8">
 		<p>Hello,</p>
-		<p>Holmwell is a software company in Oregon.</p>
+		<p>Holmwell is a software company in Corvallis, Oregon.</p>
 
 		<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
 
