Add Corvallis Arts Walk sponsorship

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 		<p>We host <a href="http://www.codecorvallis.com">Code Corvallis</a>, a monthly, 2-hour unconference about software. It is also open to the public and free to attend.</p>
 
+		<p>We sponsor the <a href="http://www.corvallisartswalk.com/">Corvallis Arts Walk</a>. Our <a href ="https://play.google.com/store/apps/details?id=com.holmwell.corvallis_arts_walk&hl=en">Android app</a> is free to download. Coming soon for iPhone.</p>
+
 		<p>Our latest news is posted to Twitter, at <a href="https://twitter.com/_holmwell">@_holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>.</p>
 
 		<p><div>Sincerely,</div>
