Rework the homepage
Change to purple background, add
a video for Circle Blvd, show the
communities we support, show that
we're backed by RAIN, add a made
in Oregon footer.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,76 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body><div class="container">
+	<div class="logo-wrapper">
+		<img src="img/circle-eee.png" width="100">
+	</div>
 	<h1>Holmwell Software</h1>
-	<div class="content col-sm-offset-2 col-sm-8">
+	<div class="content row">
+		<div class="col-sm-offset-2 col-sm-8">
+			<p>We help small communities thrive by creating
+			modern organizational tools you can afford.</p>
+		</div>
+	</div>
+
+	<div class="making row">
+		<div class="col-sm-offset-2 col-sm-8 content">
+			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, a streamlined event planner that's just the right size for your next club event, business idea, or community festival.</p>
+
+			<div class="row">
+				<div class="col-sm-offset-1 col-sm-10">
+					<div class="embed-container">
+		                <iframe src="https://www.youtube-nocookie.com/embed/-a7n_iyqB0A?rel=0" frameborder="0" allowfullscreen></iframe>
+		            </div>
+	        	</div>
+        	</div>
+
+        	<p class="after-video">Made for volunteer groups, it's at <a href="https://circleblvd.org">circleblvd.org</a>. <span style="margin-left: 1ex"><a href="https://circleblvd.org"><img src="img/circle-blvd-logo-white-64.png" width="64"></a></span></p>
+		</div>
+	</div>
+
+	<div class="supporting content row">
+		<div class="col-sm-offset-2 col-sm-8">
+			<h2 class="first">We back local communities</h2>
+			<p class="first">Holmwell Software is proud to support local 
+				organizations and businesses. Here are some favorites to whom we've
+				donated our technology, or backed financially.</p>
+			<div class="community-logos logo-wrapper row">
+				<div class="col-sm-3 col-xs-6 logo">
+					<a href="http://www.corvallisartswalk.com"><img src="img/caw-100.jpg"></a>
+				</div>
+				<div class="col-sm-3 col-xs-6 logo">
+					<a href="http://corvallisswing.com"><img src="img/corvallis-swing-100.png" width="100"></a>
+				</div>
+				<div class="col-sm-3 col-xs-6 logo">
+					<a href="http://swsdt.com"><img src="img/swsdt.png"></a>
+				</div>
+				<div class="col-sm-3 col-xs-6 logo">
+					<a href="http://builtoregon.com"><img src="img/built-oregon.png"></a>
+				</div>
+			</div>
+
+			<h2>Supported by the best</h2>
+			<p class="first">We're clients of the <a href="http://advantage.oregonstate.edu/advantage-accelerator">OSU Advantage Accelerator</a>, a business incubator for high-growth companies, <!-- &mdash; a part of <a href="http://oregonrain.org/">Oregon&nbsp;RAIN</a>&nbsp;&mdash; --> and were previously funded in part by Oregon's self-employment assistance program [<a href="http://www.oregon.gov/Employ/Unemployment/Pages/SEA.aspx">SEAP</a>].</p>
+
+			<div class="rain-wrapper community-logos logo-wrapper">
+				<a href="http://advantage.oregonstate.edu/advantage-accelerator"><img src="img/rain_corvallis.png" width="180"></a>
+			</div>
+
+			<h2>News &amp; contact</h2>
+			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/_holmwell">@_holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>. The best way to contact us is through <a href="https://circleblvd.org/contact">Circle Blvd</a>.</p>
+
+			<p class="mission">Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
+		</div>
+	</div>
+
+	<div class="content row footer">
+		<div class="col-sm-offset-2 col-sm-8 logo-wrapper">
+			<img src="img/oregon-eee.png" width="100">
+			<div class="made-in-oregon">Made in Oregon. Holmwell Software LLC.</div>
+		</div>
+	</div>
+
+		<!--
 		<p>Hello,</p>
 		<p>Holmwell is a software company in Corvallis, Oregon.</p>
 
@@ -24,6 +92,7 @@
 
 		<p><div>Sincerely,</div>
 		<div>Phil Manijak</div></p>
+	-->
 	</div>
 </div></body>
 </html>
