--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body><div class="container">
-	<div class="logo-wrapper">
-		<img src="img/circle-eee.png" width="100">
-	</div>
-	<h1>Holmwell Software</h1>
-	<div class="content row">
+	<div class="row header">
 		<div class="col-sm-offset-2 col-sm-8">
-			<p>We help small communities thrive by creating
+			<div class="logo-wrapper">
+				<img src="img/circle-eee.png" width="100">
+			</div>
+			<h1>Holmwell Software</h1>
+			<p class="first">We help small communities thrive by creating
 			modern organizational tools you can afford.</p>
 		</div>
 	</div>
