Add signature, move Oregon out of footer

--- a/index.html
+++ b/index.html
@@ -65,34 +65,27 @@
 			<h2>News &amp; contact</h2>
 			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/_holmwell">@_holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>. The best way to contact us is through <a href="https://circleblvd.org/contact">Circle Blvd</a>.</p>
 
-			<p class="mission">Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
+			<div class="mission">
+				<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
+
+				<div class="pull-left">
+					<div>Sincerely,</div>
+					<div><img src="img/signature-white-200.png" width="200"></div>
+					<div>Phil Manijak</div>
+				</div>
+
+				<div class="pull-right oregon-wrapper">
+					<img class="oregon" src="img/oregon-eee.png" width="100">
+					<div>Made in Oregon</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
 	<div class="content row footer">
 		<div class="col-sm-offset-2 col-sm-8 logo-wrapper">
-			<img src="img/oregon-eee.png" width="100">
-			<div class="made-in-oregon">Made in Oregon. Holmwell Software LLC.</div>
+			<div class="holmwell">Holmwell Software LLC</div>
 		</div>
-	</div>
-
-		<!--
-		<p>Hello,</p>
-		<p>Holmwell is a software company in Corvallis, Oregon.</p>
-
-		<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
-
-		<p>We make <a href="https://circleblvd.org">Circle Blvd.</a>, a task management site for community projects. It is open to the public and free to use.</p>
-
-		<p>We host <a href="http://www.codecorvallis.com">Code Corvallis</a>, a monthly, 2-hour unconference about software. It is also open to the public and free to attend.</p>
-
-		<p>We sponsor the <a href="http://www.corvallisartswalk.com/">Corvallis Arts Walk</a>. Our <a href ="https://play.google.com/store/apps/details?id=com.holmwell.corvallis_arts_walk&hl=en">Android app</a> is free to download. Coming soon for iPhone.</p>
-
-		<p>Our latest news is posted to Twitter, at <a href="https://twitter.com/_holmwell">@_holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>.</p>
-
-		<p><div>Sincerely,</div>
-		<div>Phil Manijak</div></p>
-	-->
 	</div>
 </div></body>
 </html>
