--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="community-logos logo-wrapper row">
 				<div class="col-sm-3 col-xs-6 logo">
 					<a href="http://www.corvallisartswalk.com"><img src="img/caw-100.jpg"></a>
-					<div class="name">Corvallis Art Walk</div>
+					<div class="name">Corvallis Arts Walk</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 logo">
 					<a href="http://corvallisswing.com"><img src="img/corvallis-swing-100.png" width="100"></a>
