Small communities -> local communities

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<img src="img/circle-eee.png" width="100">
 			</div>
 			<h1>Holmwell Software</h1>
-			<p class="first">We help small communities thrive by creating
+			<p class="first">We help local communities thrive by creating
 			modern organizational tools you can afford.</p>
 		</div>
 	</div>
