--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 			<h1>Holmwell Software</h1>
 			<p class="first">We help local communities thrive by creating
 			modern organizational tools you can afford.</p>
+
+			<p>We're in Corvallis, Oregon.</p>
 		</div>
 	</div>
 
