Add more backed projects
Code Corvallis, Jewelbots, Happymart, and
Freeform Portland.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,24 @@
 					<div class="name">Corvallis Swing</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 logo">
+					<a href="http://www.codecorvallis.com"><img src="img/code-corvallis.png" width="100"></a>
+					<div class="name">Code Corvallis</div>
+				</div>
+				<div class="col-sm-3 col-xs-6 logo">
 					<a href="http://swsdt.com"><img src="img/swsdt.png"></a>
 					<div class="name">Smith &amp; Williamson</div>
+				</div>
+				<div class="col-sm-3 col-xs-6 logo">
+					<a href="http://www.freeformportland.org/"><img src="img/freeform-portland.png"></a>
+					<div class="name">Freeform Portland</div>
+				</div>
+				<div class="col-sm-3 col-xs-6 logo" style="margin-bottom: 1ex">
+					<a href="http://www.happymartgame.com/"><img src="img/gloom-150.png" width="150"></a>
+					<div class="name">Happymart</div>
+				</div>
+				<div class="col-sm-3 col-xs-6 logo">
+					<a href="http://jewelbots.com/"><img src="img/jewelbots-100.png"></a>
+					<div class="name">Jewelbots in NYC</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 logo">
 					<a href="http://builtoregon.com"><img src="img/built-oregon.png"></a>
@@ -61,7 +77,7 @@
 				</div>
 			</div>
 
-			<h2>Supported by the best</h2>
+			<h2 class="after-community-logos">Supported by the best</h2>
 			<p class="first">We're clients of the <a href="http://advantage.oregonstate.edu/advantage-accelerator">OSU Advantage Accelerator</a>, a business incubator for high-growth companies, <!-- &mdash; a part of <a href="http://oregonrain.org/">Oregon&nbsp;RAIN</a>&nbsp;&mdash; --> and were previously funded in part by Oregon's self-employment assistance program [<a href="http://www.oregon.gov/Employ/Unemployment/Pages/SEA.aspx">SEAP</a>].</p>
 
 			<div class="rain-wrapper community-logos logo-wrapper">
