--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class="name">Freeform Portland</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 logo" style="margin-bottom: 1ex">
-					<a href="http://www.happymartgame.com/"><img src="img/gloom-150.png" width="150"></a>
+					<a href="http://www.happymartgame.com/"><img src="img/Gloom-150.png" width="150"></a>
 					<div class="name">Happymart</div>
 				</div>
 				<div class="col-sm-3 col-xs-6 logo">
