Reword Circle Blvd description
Also move logo to the center. It wasn't
working where it was on smaller screens;
it was wrapping and not looking good.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div class="making row">
 		<div class="col-sm-offset-2 col-sm-8 content">
-			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, a streamlined event planner that's just the right size for your next club event, business idea, or community festival.</p>
+			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, a streamlined event planner. Made for groups of one to 15, it's the best decision you can make for your next club event, team project, or community festival.</p>
 
 			<div class="row">
 				<div class="col-sm-offset-1 col-sm-10">
@@ -32,13 +32,17 @@
 	        	</div>
         	</div>
 
-        	<p class="after-video">Made for volunteer groups, it's at <a href="https://circleblvd.org">circleblvd.org</a>. <span style="margin-left: 1ex"><a href="https://circleblvd.org"><img src="img/circle-blvd-logo-white-64.png" width="64"></a></span></p>
+        	<p class="after-video">Available now at <a href="https://circleblvd.org">circleblvd.org</a>.</p>
 		</div>
 	</div>
 
 	<div class="supporting content row">
 		<div class="col-sm-offset-2 col-sm-8">
-			<h2 class="first">We back local communities</h2>
+			<div class="logo-wrapper">
+				<img src="img/circle-blvd-logo-white-100.png" width="100">
+			</div>
+
+			<h2>We back local communities</h2>
 			<p class="first">Holmwell Software is proud to support local 
 				organizations and businesses. Here are some favorites to whom we've
 				donated our technology, or backed financially.</p>
