Remove 'event' planner
Let's try "project planner" for now.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<div class="making row">
 		<div class="col-sm-offset-2 col-sm-8 content">
-			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, a streamlined project and event planner. Made for groups of one to 15, it's the best decision you can make for your next club event, team project, or community festival.</p>
+			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, a streamlined project planner. Made for groups of one to 15, it's the best decision you can make for your next club event, team project, or community festival.</p>
 
 			<div class="row">
 				<div class="col-sm-offset-1 col-sm-10">
