Fix page description
Circle Blvd is a project planner, not an event planner.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Holmwell Software</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css">
-	<meta name="description" content="Holmwell, a collaboration software company based in Corvallis, Oregon. Maker of Circle Blvd, a streamlined event planner.">
+	<meta name="description" content="Holmwell, a collaboration software company based in Corvallis, Oregon. Makes Circle Blvd, a streamlined project planner.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script>
