Heading: Bringing simplicity back
Update the tagline with the latest.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<img src="img/circle-eee.png" width="100">
 			</div>
 			<h1>Holmwell Software</h1>
-			<p class="first">We help local communities thrive by creating
-			modern organizational tools you can afford.</p>
+			<p class="first">We make organizational tools for local communities. We're 
+			bringing simplicity back.</p>
 
 			<p>We're in Corvallis, Oregon.</p>
 		</div>
