--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			</div>
 
 			<h2>News &amp; contact</h2>
-			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/_holmwell">@_holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>. The best way to contact us is through <a href="https://circleblvd.org/contact">Circle Blvd</a>.</p>
+			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/holmwell">@holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>. The best way to contact us is through <a href="https://circleblvd.org/contact">Circle Blvd</a>.</p>
 
 			<div class="mission">
 				<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
