Focus on project management for small teams
Our new marketing approach is to focus on
"project management for small teams." A lot
of text goes away.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Holmwell Software</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css">
-	<meta name="description" content="Holmwell, a collaboration software company based in Corvallis, Oregon. Makes Circle Blvd, a streamlined project planner.">
+	<meta name="description" content="Holmwell Software. Makes organizational tools for small teams. Headquartered in Corvallis, Oregon. Makes Circle Blvd, project management for small teams.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script>
@@ -23,16 +23,13 @@
 				<img src="img/circle-eee.png" width="100">
 			</div>
 			<h1>Holmwell Software</h1>
-			<p class="first">We make organizational tools for local communities. We're 
-			bringing simplicity back.</p>
-
-			<p>We're in Corvallis, Oregon.</p>
+<!-- 			<p class="first">We make organizational tools for small teams. We're in Corvallis, Oregon.</p> -->
 		</div>
 	</div>
 
 	<div class="making row">
 		<div class="col-sm-offset-2 col-sm-8 content">
-			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, a streamlined project planner. Made for groups of one to 15, it's the best decision you can make for your next club event, team project, or community festival.</p>
+			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, project management for small teams.</p>
 
 			<div class="row">
 				<div class="col-sm-offset-1 col-sm-10">
@@ -52,7 +49,7 @@
 				<img src="img/circle-blvd-logo-white-100.png" width="100">
 			</div>
 
-			<h2>We back local communities</h2>
+			<h2>Supporting small groups</h2>
 			<p class="first">Holmwell Software is proud to support local 
 				organizations and businesses. Here are some favorites to whom we've
 				donated our technology, or backed financially.</p>
@@ -102,7 +99,7 @@
 			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/holmwell">@holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>. The best way to contact us is through <a href="https://circleblvd.org/contact">Circle Blvd</a>.</p>
 
 			<div class="mission">
-				<p>Our mission is to help small organizations capitalize on the collaborative power of the Internet; to help our communities share, notably services, things, and knowledge; to specifically work for the poor.</p>
+				<p>We help small teams organize. We help small groups share. We specifically work for the poor.</p>
 
 				<div class="pull-left">
 					<div>Sincerely,</div>
