Update copy: Now 'graduates' of accelerator

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</div>
 
 			<h2 class="after-community-logos">Supported by the best</h2>
-			<p class="first">We're clients of the <a href="http://advantage.oregonstate.edu/advantage-accelerator">OSU Advantage Accelerator</a>, a business incubator for high-growth companies, <!-- &mdash; a part of <a href="http://oregonrain.org/">Oregon&nbsp;RAIN</a>&nbsp;&mdash; --> and were previously funded in part by Oregon's self-employment assistance program [<a href="http://www.oregon.gov/Employ/Unemployment/Pages/SEA.aspx">SEAP</a>].</p>
+			<p class="first">We're graduates of the <a href="http://advantage.oregonstate.edu/advantage-accelerator">OSU Advantage Accelerator</a>, a business incubator for high-growth companies, <!-- &mdash; a part of <a href="http://oregonrain.org/">Oregon&nbsp;RAIN</a>&nbsp;&mdash; --> and were previously funded in part by Oregon's self-employment assistance program [<a href="http://www.oregon.gov/Employ/Unemployment/Pages/SEA.aspx">SEAP</a>].</p>
 
 			<div class="rain-wrapper community-logos logo-wrapper">
 				<a href="http://advantage.oregonstate.edu/advantage-accelerator"><img src="img/rain_corvallis.png" width="180"></a>
