Mission: "with," not "for"
Work with people, not for them. An
important distinction.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/holmwell">@holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>. The best way to contact us is through <a href="https://circleblvd.org/contact">Circle Blvd</a>.</p>
 
 			<div class="mission">
-				<p>We help small teams organize. We help small groups share. We specifically work for the poor.</p>
+				<p>We help small teams organize. We help small groups share. We specifically work with the poor.</p>
 
 				<div class="pull-left">
 					<div>Sincerely,</div>
