--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<title>Holmwell Software</title>
+	<title>Holmwell Foundation</title>
 	<link rel="stylesheet" type="text/css" href="style/main.css">
-	<meta name="description" content="Holmwell Software. Makes organizational tools for communities. Headquartered in Corvallis, Oregon. Makes Circle Blvd, project management for community organizers.">
+	<meta name="description" content="Holmwell Foundation. Makes organizational tools for communities. Powering the Morning Shift Coalition, headquartered in Olympia, Washington.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<script>
@@ -19,115 +19,36 @@
 <body><div class="container">
 	<div class="row header">
 		<div class="col-sm-offset-2 col-sm-8">
-			<!-- Inline so we can apply CSS styles -->
-			<svg
-			   xmlns:dc="http://purl.org/dc/elements/1.1/"
-			   xmlns:cc="http://creativecommons.org/ns#"
-			   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-			   xmlns:svg="http://www.w3.org/2000/svg"
-			   xmlns="http://www.w3.org/2000/svg"
-			   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-			   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-			   version="1.1"
-			   viewBox="0 0 880 400"
-			   stroke-miterlimit="10"
-			   id="logo-svg"
-			   inkscape:version="0.91 r13725"
-			   sodipodi:docname="holmwell-logo.svg"
-			   width="880"
-			   height="400"
-			   style="fill:none;stroke:none;stroke-linecap:square;stroke-miterlimit:10">
-			  <metadata
-			     id="metadata27">
-			    <rdf:RDF>
-			      <cc:Work
-			         rdf:about="">
-			        <dc:format>image/svg+xml</dc:format>
-			        <dc:type
-			           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-			        <dc:title></dc:title>
-			      </cc:Work>
-			    </rdf:RDF>
-			  </metadata>
-			  <defs
-			     id="defs25" />
-			  <sodipodi:namedview
-			     pagecolor="#ffffff"
-			     bordercolor="#666666"
-			     borderopacity="1"
-			     objecttolerance="10"
-			     gridtolerance="10"
-			     guidetolerance="10"
-			     inkscape:pageopacity="0"
-			     inkscape:pageshadow="2"
-			     inkscape:window-width="1570"
-			     inkscape:window-height="926"
-			     id="namedview23"
-			     showgrid="false"
-			     inkscape:zoom="0.93691648"
-			     inkscape:cx="586.84531"
-			     inkscape:cy="354.97386"
-			     inkscape:window-x="165"
-			     inkscape:window-y="56"
-			     inkscape:window-maximized="0"
-			     inkscape:current-layer="g7" />
-			  <clipPath
-			     id="p.0">
-			    <path
-			       d="M 0,0 960,0 960,540 0,540 0,0 Z"
-			       id="path5"
-			       inkscape:connector-curvature="0"
-			       style="clip-rule:nonzero" />
-			  </clipPath>
-			  <g
-			     clip-path="url(#p.0)"
-			     id="g7"
-			     transform="translate(0,-140)">
-			    <path
-			       d="m 5.28346,339.93701 0,0 c 0,-107.52593 87.16699,-194.69292 194.69292,-194.69292 l 0,0 c 51.63577,0 101.15668,20.51223 137.66867,57.02423 36.51199,36.51201 57.02423,86.03291 57.02423,137.66869 l 0,0 c 0,107.52591 -87.16699,194.6929 -194.6929,194.6929 l 0,0 c -107.52593,0 -194.69292,-87.16699 -194.69292,-194.6929 z m 38.82176,0 0,0 c 0,86.08527 69.78589,155.87115 155.87115,155.87115 86.08527,0 155.87115,-69.78589 155.87115,-155.87115 l 0,0 c 0,-86.08527 -69.78589,-155.87115 -155.87115,-155.87115 l 0,0 c -86.08526,0 -155.87115,69.78588 -155.87115,155.87115 z"
-			       id="path11"
-			       inkscape:connector-curvature="0"
-			       class="circle"
-			       style="fill-rule:nonzero" />
-			    <path
-			       d="m 80.72529,111.83202 894.55115,0 0,215.49606 -894.55115,0 z"
-			       id="path13"
-			       inkscape:connector-curvature="0"
-			       style="fill:#000000;fill-opacity:0;fill-rule:nonzero" />
-			    <path
-			       d="m 132.62073,347.10684 0,-4.28127 17.625,0 0,4.28127 -5.5,0.95312 0,16.9375 23.79687,0 0,-16.9375 -5.5,-0.95312 0,-4.28127 5.5,0 6.625,0 5.5,0 0,4.28127 -5.5,0.95312 0,38.64063 5.5,0.9375 0,4.25 -17.625,0 0,-4.25 5.5,-0.9375 0,-16.46875 -23.79687,0 0,16.46875 5.5,0.9375 0,4.25 -17.625,0 0,-4.25 5.5,-0.9375 0,-38.64063 -5.5,-0.95312 z m 53.88925,26.21875 q 0,-8.09375 4.375,-13.32813 4.39062,-5.23437 11.90625,-5.23437 7.54687,0 11.9375,5.21875 4.39062,5.21875 4.39062,13.34375 l 0,0.73437 q 0,8.15625 -4.375,13.34375 -4.375,5.1875 -11.89062,5.1875 -7.57813,0 -11.96875,-5.20312 -4.375,-5.20313 -4.375,-13.32813 l 0,-0.73437 z m 6.64062,0.73437 q 0,5.79688 2.4375,9.57813 2.45313,3.76562 7.26563,3.76562 4.71875,0 7.17187,-3.76562 2.46875,-3.78125 2.46875,-9.57813 l 0,-0.73437 q 0,-5.73438 -2.46875,-9.53125 -2.45312,-3.8125 -7.23437,-3.8125 -4.79688,0 -7.21875,3.8125 -2.42188,3.79687 -2.42188,9.53125 l 0,0.73437 z m 31.31739,-30.45314 0,-4.28125 12.125,0 0,47.37502 5.48437,0.9375 0,4.25 -17.60937,0 0,-4.25 5.48437,-0.9375 0,-42.15627 -5.48437,-0.9375 z m 21.42807,44.03127 5.48437,-0.9375 0,-26.04688 -5.48437,-0.9375 0,-4.28125 11.45312,0 0.4375,4.75 q 1.75,-2.59375 4.51563,-4 2.76562,-1.42187 6.40625,-1.42187 3.625,0 6.23437,1.6875 2.625,1.67187 3.9375,5.04687 1.71875,-3.09375 4.54688,-4.90625 2.82812,-1.82812 6.60937,-1.82812 5.57813,0 8.8125,3.82812 3.23438,3.8125 3.23438,11.5 l 0,16.60938 5.5,0.9375 0,4.25 -17.65625,0 0,-4.25 5.5,-0.9375 0,-16.67188 q 0,-5.39062 -1.85938,-7.625 -1.85937,-2.25 -5.5,-2.25 -3.46875,0 -5.57812,2.4375 -2.09375,2.4375 -2.4375,6.15625 l 0,17.95313 5.5,0.9375 0,4.25 -17.625,0 0,-4.25 5.48437,-0.9375 0,-16.67188 q 0,-5.125 -1.90625,-7.5 -1.89062,-2.375 -5.5,-2.375 -3.03125,0 -4.98437,1.25 -1.95313,1.23438 -3,3.5 l 0,21.79688 5.5,0.9375 0,4.25 -17.625,0 0,-4.25 z m 79.75287,-27.92188 -4.17188,0.73438 4.75,18.15625 0.76563,4.42187 0.20312,0 0.9375,-4.42187 7.28125,-23.17188 5.32813,0 7.3125,23.17188 1.04687,4.92187 0.20313,0 0.96875,-4.92187 4.48437,-18.15625 -4.25,-0.73438 0,-4.28125 13.89063,0 0,4.28125 -3.17188,0.46875 -9.20312,31.70313 -5.35938,0 -7.0625,-22.20313 -1.51562,-6.125 -0.20313,0.0312 -1.42187,6.09375 -6.9375,22.20313 -5.35938,0 -9.20312,-31.70313 -3.1875,-0.46875 0,-4.28125 13.875,0 0,4.28125 z m 61.01394,32.875 q -7.60937,0 -12.10937,-5.0625 -4.5,-5.07812 -4.5,-13.15625 l 0,-1.48437 q 0,-7.78125 4.625,-12.95313 4.64062,-5.17187 10.96875,-5.17187 7.34375,0 11.14062,4.45312 3.79688,4.4375 3.79688,11.84375 l 0,4.15625 -23.65625,0 -0.10938,0.15625 q 0.10938,5.26563 2.67188,8.65625 2.5625,3.375 7.17187,3.375 3.375,0 5.90625,-0.95312 2.54688,-0.96875 4.40625,-2.65625 l 2.59375,4.3125 q -1.95312,1.89062 -5.17187,3.1875 -3.21875,1.29687 -7.73438,1.29687 z m -1.01562,-32.60937 q -3.32813,0 -5.6875,2.8125 -2.35938,2.8125 -2.89063,7.0625 l 0.0625,0.17187 16.8125,0 0,-0.875 q 0,-3.92187 -2.09375,-6.54687 -2.09375,-2.625 -6.20312,-2.625 z m 20.73941,-16.37502 0,-4.28125 12.125,0 0,47.37502 5.48437,0.9375 0,4.25 -17.60937,0 0,-4.25 5.48437,-0.9375 0,-42.15627 -5.48437,-0.9375 z m 21.83429,0 0,-4.28125 12.125,0 0,47.37502 5.48438,0.9375 0,4.25 -17.60938,0 0,-4.25 5.48438,-0.9375 0,-42.15627 -5.48438,-0.9375 z m 74.87726,13.71877 -5.01563,0 -1.25,-7.01563 q -1.51562,-1.28125 -4.04687,-2.125 -2.53125,-0.84375 -5.85938,-0.84375 -5.29687,0 -8.125,2.25 -2.82812,2.23438 -2.82812,5.84375 0,3.20313 2.875,5.34375 2.89062,2.14063 9.32812,3.75 7.75,1.92188 11.76563,5.67188 4.03125,3.73437 4.03125,9.25 0,5.9375 -4.84375,9.54687 -4.82813,3.59375 -12.64063,3.59375 -5.65625,0 -10.0625,-1.84375 -4.39062,-1.85937 -7.15625,-4.85937 l 0,-9.125 4.98438,0 1.28125,7.03125 q 1.92187,1.59375 4.57812,2.60937 2.67188,1 6.375,1 5.01563,0 7.92188,-2.10937 2.92187,-2.125 2.92187,-5.76563 0,-3.375 -2.53125,-5.64062 -2.51562,-2.28125 -8.92187,-3.82813 -7.78125,-1.85937 -12.17188,-5.45312 -4.375,-3.60938 -4.375,-9.07813 0,-5.75 4.89063,-9.57814 4.89062,-3.82812 12.70312,-3.82812 5.15625,0 9.375,1.78125 4.23438,1.76562 6.79688,4.28127 l 0,9.14062 z m 7.33801,16 q 0,-8.09375 4.375,-13.32813 4.39063,-5.23437 11.90625,-5.23437 7.54688,0 11.9375,5.21875 4.39063,5.21875 4.39063,13.34375 l 0,0.73437 q 0,8.15625 -4.375,13.34375 -4.375,5.1875 -11.89063,5.1875 -7.57812,0 -11.96875,-5.20312 -4.375,-5.20313 -4.375,-13.32813 l 0,-0.73437 z m 6.64063,0.73437 q 0,5.79688 2.4375,9.57813 2.45312,3.76562 7.26562,3.76562 4.71875,0 7.17188,-3.76562 2.46875,-3.78125 2.46875,-9.57813 l 0,-0.73437 q 0,-5.73438 -2.46875,-9.53125 -2.45313,-3.8125 -7.23438,-3.8125 -4.79687,0 -7.21875,3.8125 -2.42187,3.79687 -2.42187,9.53125 l 0,0.73437 z m 31.58301,-13.70312 0,-4.92188 5.6875,0 0,-4.60937 q 0,-5.84377 3.04687,-9.01564 3.0625,-3.1875 8.51563,-3.1875 1.14062,0 2.29687,0.1875 1.17188,0.1875 2.59375,0.51562 l -0.8125,5.0625 q -0.60937,-0.14062 -1.46875,-0.23437 -0.85937,-0.10938 -1.76562,-0.10938 -2.9375,0 -4.35938,1.73438 -1.40625,1.73439 -1.40625,5.04689 l 0,4.60938 7.60938,0 0,4.92187 -7.60938,0 0,26.34375 5.5,0.9375 0,4.25 -17.625,0 0,-4.25 5.48438,-0.9375 0,-26.34375 -5.6875,0 z m 36.87835,-13.71875 0,8.79687 6.90625,0 0,4.92188 -6.90625,0 0,22.125 q 0,2.5625 1.0625,3.60937 1.0625,1.04688 2.8125,1.04688 0.875,0 1.96875,-0.14063 1.09375,-0.15625 1.82813,-0.32812 l 0.92187,4.54687 q -0.95312,0.60938 -2.78125,0.98438 -1.8125,0.39062 -3.625,0.39062 -4.04687,0 -6.4375,-2.4375 -2.39062,-2.4375 -2.39062,-7.67187 l 0,-22.125 -5.76563,0 0,-4.92188 5.76563,0 0,-8.79687 6.64062,0 z m 26.73249,13.07812 -4.17188,0.73438 4.75,18.15625 0.76563,4.42187 0.20312,0 0.9375,-4.42187 7.28125,-23.17188 5.32813,0 7.3125,23.17188 1.04687,4.92187 0.20313,0 0.96875,-4.92187 4.48437,-18.15625 -4.25,-0.73438 0,-4.28125 13.89063,0 0,4.28125 -3.17188,0.46875 -9.20312,31.70313 -5.35938,0 -7.0625,-22.20313 -1.51562,-6.125 -0.20313,0.0312 -1.42187,6.09375 -6.9375,22.20313 -5.35938,0 -9.20312,-31.70313 -3.1875,-0.46875 0,-4.28125 13.875,0 0,4.28125 z m 68.15454,32.17188 q -0.29688,-1.48438 -0.46875,-2.65625 -0.17188,-1.1875 -0.23438,-2.35938 -1.92187,2.45313 -4.8125,4.09375 -2.875,1.625 -6.14062,1.625 -5.6875,0 -8.65625,-2.78125 -2.96875,-2.78125 -2.96875,-7.82812 0,-5.1875 4.1875,-8 4.20312,-2.8125 11.51562,-2.8125 l 6.84375,0 0,-4.25 q 0,-3.20313 -2.03125,-5.0625 -2.01562,-1.875 -5.625,-1.875 -2.48437,0 -4.39062,0.64062 -1.90625,0.64063 -3.07813,1.75 l -0.71875,3.84375 -5.10937,0 0,-7.07812 q 2.48437,-1.98438 6.01562,-3.17188 3.54688,-1.20312 7.6875,-1.20312 6.20313,0 10.04688,3.17187 3.84375,3.15625 3.84375,9.0625 l 0,17.54688 q 0,0.70312 0.0156,1.375 0.0156,0.67187 0.0781,1.35937 l 2.70312,0.35938 0,4.25 -8.70312,0 z m -10.67188,-4.85938 q 3.29688,0 6.01563,-1.57812 2.73437,-1.57813 3.92187,-3.8125 l 0,-5.98438 -7.07812,0 q -4.07813,0 -6.45313,1.89063 -2.375,1.875 -2.375,4.57812 0,2.39063 1.48438,3.65625 1.48437,1.25 4.48437,1.25 z m 25.07526,-27.3125 0,-4.28125 11.42187,0 0.64063,5.28125 q 1.54687,-2.79687 3.8125,-4.375 2.28125,-1.57812 5.21875,-1.57812 0.76562,0 1.59375,0.125 0.82812,0.10937 1.26562,0.25 l -0.875,6.15625 -3.78125,-0.20313 q -2.625,0 -4.40625,1.23438 -1.78125,1.23437 -2.76562,3.45312 l 0,20.92188 5.5,0.9375 0,4.25 -17.625,0 0,-4.25 5.48437,-0.9375 0,-26.04688 -5.48437,-0.9375 z m 45.31299,32.875 q -7.60938,0 -12.10938,-5.0625 -4.5,-5.07812 -4.5,-13.15625 l 0,-1.48437 q 0,-7.78125 4.625,-12.95313 4.64063,-5.17187 10.96875,-5.17187 7.34375,0 11.14063,4.45312 3.79687,4.4375 3.79687,11.84375 l 0,4.15625 -23.65625,0 -0.10937,0.15625 q 0.10937,5.26563 2.67187,8.65625 2.5625,3.375 7.17188,3.375 3.375,0 5.90625,-0.95312 2.54687,-0.96875 4.40625,-2.65625 l 2.59375,4.3125 q -1.95313,1.89062 -5.17188,3.1875 -3.21875,1.29687 -7.73437,1.29687 z m -1.01563,-32.60937 q -3.32812,0 -5.6875,2.8125 -2.35937,2.8125 -2.89062,7.0625 l 0.0625,0.17187 16.8125,0 0,-0.875 q 0,-3.92187 -2.09375,-6.54687 -2.09375,-2.625 -6.20313,-2.625 z"
-			       id="path15"
-			       inkscape:connector-curvature="0"
-			       style="fill:#eee;fill-rule:nonzero" />
-			  </g>
-			</svg>
+			<h1>Holmwell Foundation</h1>
+
+			<div class="content">
+				<div class="logo-wrapper">
+					<img src="img/morning-shift-96.png">
+				</div>
+
+				<p class="content">We are powering the <a href="https://morningshift.org">Morning Shift Coalition</a>, bridging the gap between passion and action in our challenging political climate.</p>
+			</div>
 		</div>
 	</div>
 
 	<div class="making row">
 		<div class="col-sm-offset-2 col-sm-8 content">
-			<p>We make <a href="https://circleblvd.org">Circle Blvd</a>, project management for community organizers.</p>
+			<div class="logo-wrapper">
+				<img src="img/circle-blvd-100.png">
+			</div>
 
-			<div class="row">
-				<div class="col-sm-offset-1 col-sm-10">
-					<div class="embed-container">
-		                <iframe src="https://www.youtube-nocookie.com/embed/-a7n_iyqB0A?rel=0" frameborder="0" allowfullscreen></iframe>
-		            </div>
-	        	</div>
-        	</div>
-
-        	<p class="after-video">Available now at <a href="https://circleblvd.org">circleblvd.org</a>.</p>
+			<p class="content">We also make <a href="https://circleblvd.org">Circle Blvd</a>, project management for community organizers, available now at <a href="https://circleblvd.org">circleblvd.org</a>.</p>
 		</div>
 	</div>
 
 	<div class="supporting content row">
 		<div class="col-sm-offset-2 col-sm-8">
 			<div class="logo-wrapper">
-				<img src="img/icon-same-idea-white-100.png" width="100">
+				<img src="img/holmwell-logo-rough.png" width="100">
 			</div>
 
-			<h2>Supporting small groups</h2>
-			<p class="first">Holmwell Software is proud to support local 
+			<h2>Growing communities</h2>
+			<p class="first">Holmwell Foundation is proud to support local 
 				organizations and businesses. Here are some favorites to whom we've
 				donated our technology, or backed financially.</p>
 			<div class="community-logos logo-wrapper row">
@@ -165,28 +86,32 @@
 				</div>
 			</div>
 
-			<h2 class="after-community-logos">Supported by the best</h2>
-			<p class="first">We're graduates of the <a href="http://advantage.oregonstate.edu/advantage-accelerator">OSU Advantage Accelerator</a>, a business incubator for high-growth companies, <!-- &mdash; a part of <a href="http://oregonrain.org/">Oregon&nbsp;RAIN</a>&nbsp;&mdash; --> and were previously funded in part by Oregon's self-employment assistance program [<a href="http://www.oregon.gov/Employ/Unemployment/Pages/SEA.aspx">SEAP</a>].</p>
+			<h2 class="after-community-logos">Supported by the Pacific Northwest</h2>
+			<p class="first">We're graduates of the Oregon State University <a href="http://advantage.oregonstate.edu/advantage-accelerator">Advantage Accelerator</a>, a business incubator for high-growth companies, and were previously funded in part by Oregon's self-employment assistance program [<a href="http://www.oregon.gov/Employ/Unemployment/Pages/SEA.aspx">SEAP</a>].</p>
 
 			<div class="rain-wrapper community-logos logo-wrapper">
 				<a href="http://advantage.oregonstate.edu/advantage-accelerator"><img src="img/rain_corvallis.png" width="180"></a>
 			</div>
 
 			<h2>News &amp; contact</h2>
-			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/holmwell">@holmwell</a> and <a href="https://twitter.com/circleblvd">@circleblvd</a>. The best way to contact us is through <a href="https://circleblvd.org/contact">Circle Blvd</a>.</p>
+			<p class="first">Our latest news is posted to Twitter at <a href="https://twitter.com/holmwell">@holmwell</a>. If you would like to contact us about <a href="https://morningshift.org">Morning Shift</a>, we ask that you do so through our <a href="https://facebook.com/morningshiftcoalition">Facebook page</a>.</p>
 
 			<div class="mission">
-				<p>We help small teams organize. We help small groups share. We specifically work with the poor.</p>
+				<p>The challenges of climate change, institutionalized racism, sexism, hatred, and exploitation of our labor must be addressed.</p> 
+
+				<p>Through organization and action we will rise to the occasion of this moment, and create a world for all of us.</p>
+
+				<p>After November 8, 2016, we know what we need to do. Now is the time, and we invite you to join us.</p> 
 
 				<div class="pull-left">
 					<div>Sincerely,</div>
 					<div><img src="img/signature-white-200.png" width="200"></div>
-					<div>Phil Manijak</div>
+					<div>Philip Manijak</div>
 				</div>
 
-				<div class="pull-right oregon-wrapper">
-					<img class="oregon" src="img/oregon-eee.png" width="100">
-					<div>Made in Oregon</div>
+				<div class="pull-right washington-wrapper">
+					<img class="washington" src="img/washington-state.png" width="100">
+					<div>Made in Washington</div>
 				</div>
 			</div>
 		</div>
@@ -194,7 +119,7 @@
 
 	<div class="content row footer">
 		<div class="col-sm-offset-2 col-sm-8 logo-wrapper">
-			<div class="holmwell">Holmwell Software LLC</div>
+			<div class="holmwell">Holmwell Foundation LLC</div>
 		</div>
 	</div>
 </div></body>
